--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/entity": "^8.3.0",
     "@ngrx/schematics": "^8.5.2",
     "@ngrx/store": "^8.3.0",
+    "@types/googlemaps": "^3.39.3",
     "core-js": "^3.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
